--- a/app/views/top_items/_top_item.html.erb
+++ b/app/views/top_items/_top_item.html.erb
@@ -1,5 +1,5 @@
 <%= cache top_item do %>
-  <div class="column is-one-quarter-desktop is-half-tablet is-full-mobile" data-location="<%= top_item.location %>">
+  <div class="column is-one-quarter-widescreen is-one-third-desktop is-half-tablet is-full-mobile" data-location="<%= top_item.location %>">
     <%= render top_item.item %>
   </div>
 <% end %>
