--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -1,3 +1,12 @@
+@charset "utf-8";
+
+// Update Bulma's global variables
+$link: #283848;
+$navbar-background-color: #C50001;
+$navbar-item-color: #fff;
+$navbar-item-active-color: #C50001;
+$navbar-item-active-background-color: #fff;
+
 @import '~bulma/bulma';
 
 main.container {
@@ -5,19 +14,19 @@ main.container {
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .card-footer {
-  margin-top: auto;
+    margin-top: auto;
 }
 
 // body {
-    // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    // background-color: #f2f3f5;
-    // overflow-y: scroll;
+// font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+// background-color: #f2f3f5;
+// overflow-y: scroll;
 // }
 
 // a, body {
@@ -245,19 +254,19 @@ main.container {
 //     border-top: 1px solid #eee;
 //     position: relative;
 
-    // .by, .text, .toggle {
-    //     font-size: .9em;
-    //     margin: 1em 0;
-    //  }
+// .by, .text, .toggle {
+//     font-size: .9em;
+//     margin: 1em 0;
+//  }
 
-    // .by {
-    //     color: #828282;
+// .by {
+//     color: #828282;
 
-    //     a {
-    //         color: #828282;
-    //         text-decoration: underline;
-    //     }
-    // }
+//     a {
+//         color: #828282;
+//         text-decoration: underline;
+//     }
+// }
 
 //     .text {
 //         overflow-wrap: break-word;
@@ -339,11 +348,13 @@ main.container {
         animation-play-state: running;
     }
 
-    &.v-enter, &.v-leave-active {
+    &.v-enter,
+    &.v-leave-active {
         opacity: 0;
     }
 
-    &.v-enter-active, &.v-leave {
+    &.v-enter-active,
+    &.v-leave {
         opacity: 1;
     }
 
@@ -356,6 +367,151 @@ main.container {
         transform-origin: center;
         -webkit-animation: dash 1.4s ease-in-out infinite;
         animation: dash 1.4s ease-in-out infinite;
+    }
+}
+
+// Thanks! https://raw.githubusercontent.com/daneden/animate.css/master/animate.css
+
+@-webkit-keyframes slideInDown {
+    from {
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+        visibility: visible;
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes slideInDown {
+    from {
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+        visibility: visible;
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.slideInDown {
+    -webkit-animation-name: slideInDown;
+    animation-name: slideInDown;
+}
+
+@-webkit-keyframes slideOutDown {
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        visibility: hidden;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+    }
+}
+
+@keyframes slideOutDown {
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        visibility: hidden;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+    }
+}
+
+.slideOutDown {
+    -webkit-animation-name: slideOutDown;
+    animation-name: slideOutDown;
+}
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animated.infinite {
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+
+.animated.delay-1s {
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.animated.delay-2s {
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+}
+
+.animated.delay-3s {
+    -webkit-animation-delay: 3s;
+    animation-delay: 3s;
+}
+
+.animated.delay-4s {
+    -webkit-animation-delay: 4s;
+    animation-delay: 4s;
+}
+
+.animated.delay-5s {
+    -webkit-animation-delay: 5s;
+    animation-delay: 5s;
+}
+
+.animated.fast {
+    -webkit-animation-duration: 800ms;
+    animation-duration: 800ms;
+}
+
+.animated.faster {
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
+}
+
+.animated.slow {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+}
+
+.animated.slower {
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+}
+
+@media (print),
+(prefers-reduced-motion) {
+    .animated {
+        -webkit-animation: unset !important;
+        animation: unset !important;
+        -webkit-transition: none !important;
+        transition: none !important;
+    }
+}
+
+.disappear {
+    animation: disappear 5s ease-in-out .25s 1;
+}
+
+@keyframes disappear {
+    0% {
+        top: 100%;
+    }
+
+    to {
+        top: 0%;
     }
 }
 
@@ -420,9 +576,9 @@ main.container {
 }
 
 .swipable--view {
-  --n: 1;
-  --i: 0;
-  width: 100%; // fallback
-  width: calc(var(--n)*100%);
-  transform: translate(calc(var(--i)/var(--n)*-100%));
+    --n: 1;
+    --i: 0;
+    width: 100%; // fallback
+    width: calc(var(--n)*100%);
+    transform: translate(calc(var(--i)/var(--n)*-100%));
 }
