--- a/app/views/ask_items/_ask_item.html.erb
+++ b/app/views/ask_items/_ask_item.html.erb
@@ -1,3 +1,5 @@
-<li data-location="<%= ask_item.location %>" >
-  <%= render ask_item.item %>
-</li>
+<%= cache ask_item do %>
+  <div class="column is-one-quarter-widescreen is-one-third-desktop is-half-tablet is-full-mobile" data-location="<%= ask_item.location %>">
+    <%= render ask_item.item %>
+  </div>
+<% end %>
