--- a/app/views/job_items/_job_item.html.erb
+++ b/app/views/job_items/_job_item.html.erb
@@ -1,3 +1,5 @@
-<li data-location="<%= job_item.location %>">
-  <%= render job_item.item %>
-</li>
+<%= cache job_item do %>
+  <div class="column is-one-quarter-widescreen is-one-third-desktop is-half-tablet is-full-mobile" data-location="<%= job_item.location %>">
+    <%= render job_item.item %>
+  </div>
+<% end %>
