--- a/app/views/items/_comments.html.erb
+++ b/app/views/items/_comments.html.erb
@@ -1,9 +1,9 @@
 <%= cache ['comments-list', item] do %>
   <% item.kids.order(:kid_location).each do | kid | %>
-    <article class="media" data-controller='toggle' data-toggle-count="<%= item.kids.count %>" data-hn-id="<%= item.hn_id %>">
+    <article class="media" data-controller='toggle' data-toggle-count="<%= [kid.kids.count, 1].max %>" data-hn-id="<%= item.hn_id %>">
       <% unless item.story? %>
         <div class="media-left">
-          <div data-target="toggle.toggle"><a data-target='toggle.link' data-action="toggle#toggle">[-]</a></div>
+          <div class="toggle open" data-target="toggle.toggle"><a class="button" data-target='toggle.link' data-action="toggle#toggle">[-]</a></div>
         </div>
       <% end %>
       <div class="media-content" data-target="toggle.comments">
