--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -2,7 +2,7 @@
   <div class="card" data-item-id="<%= item.id %>">
     <header class="card-header">
       <p class="card-header-title">
-        <span class="tag is-info is-rounded"><%= item.score %></span>
+        <span class="tag is-link is-rounded"><%= item.score %></span>
         <% if item.job? %>
           &nbsp;&nbsp;job
         <% end %>
