--- a/app/views/asks/show.html.erb
+++ b/app/views/asks/show.html.erb
@@ -1,7 +1,7 @@
 <%- content_for( :ask_items_active ) { "is-active" } %>
 <%= render partial: 'layouts/page_navigation', locals: { page: @page, total_pages: @total_pages, path: ask_path } %>
 <%= cache ['asks-list', @ask_item, @page] do %>
-  <section class="section" data-controller="ask-item items">
+  <section class="section" data-controller="item-location items" data-item-location-channel="AskItemChannel">
     <div class="columns is-multiline">
       <% @ask_items.each_slice(4) do |slice| %>
         <% slice.each do |item| %>
