--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,7 +1,7 @@
 <%- content_for( :new_items_active ) { "is-active" } %>
 <%= render partial: 'layouts/page_navigation', locals: { page: @page, total_pages: @total_pages, path: new_path } %>
 <%= cache ['new-list', @new_item, @page] do %>
-  <section class="section" data-controller="new-item items">
+  <section class="section" data-controller="item-location items" data-item-location-channel="NewItemChannel">
     <div class="columns is-multiline">
       <% @new_items.each_slice(4) do |slice| %>
         <% slice.each do |item| %>
