--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -1,7 +1,7 @@
 <%- content_for( :top_items_active ) { "is-active" } %>
 <%= render partial: 'layouts/page_navigation', locals: { page: @page, total_pages: @total_pages, path: top_path } %>
 <%= cache ['news-list', @top_item, @page] do %>
-  <section class="section" data-controller="top-item items">
+  <section class="section" data-controller="item-location items" data-item-location-channel="TopItemChannel">
     <div class="columns is-multiline">
       <% @top_items.each_slice(4) do |slice| %>
         <% slice.each do |item| %>
