Refactoring comments page and fixing action cable

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -7,7 +7,7 @@
           &nbsp;&nbsp;job
         <% end %>
          <% unless item.host.nil? %>
-          &nbsp;&nbsp;<span class="host"> <%= item.host %></span>
+          &nbsp;&nbsp;<%= item.host %>
         
       <% end %>
       </p>
