--- a/app/views/items/_comments_header.html.erb
+++ b/app/views/items/_comments_header.html.erb
@@ -1,5 +1,19 @@
-<% if item.descendants == 0 %>
-  No comments yet.
-<% else %>
-  <%= pluralize(item.descendants, 'comment') %>
-<% end %>
+<p class="card-header-title">
+  <% unless completed %>
+    <svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
+      <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
+      </circle>
+    </svg>
+    <% if item.descendants > 0 %>
+      Refreshing Comments...
+    <% else %>
+      Waiting for comments...
+    <% end %>
+  <% else %>
+     <% if item.descendants > 0 %>
+      Comments
+    <% else %>
+      No Comments
+    <% end %>
+  <% end %>
+</p>
