Fixing css path, as it changed elsewhere but not here.

--- a/app/views/service_worker/service_worker.js.erb
+++ b/app/views/service_worker/service_worker.js.erb
@@ -7,7 +7,7 @@ function onInstall(event) {
     caches.open(CACHE_NAME).then(function prefill(cache) {
       return cache.addAll([
         '<%= asset_pack_path 'application.js' %>',
-        '<%= asset_pack_path 'application.css' %>',
+        '<%= stylesheet_path 'application.css' %>',
         '/offline.html',
       ]);
     })
