--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -264,3 +264,6 @@ main.container
     width: 100% // fallback
     width: calc(var(--n)*100%)
     transform: translate(calc(var(--i)/var(--n)*-100%))
+    
+.progress::-webkit-progress-value
+    transition: all 0.5s ease
